新增統一的 RS 處理 跟 Exception處理邏輯
